--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.0",
     "lucide-react": "^0.553.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "latest"
+    "@google/genai": "latest",
+    "@vercel/node": "^5.5.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
